<resources>
    <string name="server_url">https://bigoud.games/smsvote/</string>
    <string name="app_id">1915484469352</string>
    <string name="client_key">195951</string>
    <string name="app_name">SMSVote</string>
    <string name="missingPermissions">Autorisations manquantes</string>
    <string name="allowAddPermissionsSMS">Nous avons besoin d\’accéder aux SMS de l\’appareil. Vous ne pouvez pas continuer sans…</string>
    <string name="allow">OK</string>
    <string name="addAnswerButton">Ajouter une réponse</string>
    <string name="validateButton">Valider</string>
    <string name="typeYourQuestion">Saisissez votre question</string>
    <string name="typeYourAnswer">Saisissez votre réponse</string>
    <string name="editForm">Editer</string>
    <string name="playIconDescription">Image play</string>
    <string name="stopIconDescription">Image stop</string>
    <string name="question">Question</string>
    <string name="playBtnClicked">Le bouton play a été cliqué</string>
    <string name="stopBtnClicked">Le bouton stop a été cliqué</string>
    <string name="answer">Réponse</string>
    <string name="chartDescription">Résultat du vote : %s</string>
    <string name="numberOfResponse">Nombre de réponses: %s</string>
    <string name="mustFillAllAnswers">Vous devez remplir toutes les réponses disponibles avant d\'en rajouter une</string>
    <string name="mustFillAllFields">Vous devez remplir la question et toutes les réponses possibles avant de valider</string>
    <string name="alertStopTitle">Arrêt de l\'enregistrement</string>
    <string name="alertStopMessage">Voulez-vous vraiment arrêter l\'enregistrement des réponses du vote ?</string>
    <string name="alertStopPositiveButton">Oui, arrêter</string>
    <string name="alertStopNegativeButton">Non</string>
    <string name="allowedPermissionsPhoneState">Nous avons besoin d\'accéder à l\'état du téléphone.</string>
    <string name="saveCsvFailed">La sauvegarde CSV du vote a échouée</string>
    <string name="saveCsvSuccess">La sauvegarde CSV a été réalisée avec succès.\nVous pouvez retrouver le fichier dans le stockage de l\'appareil</string>
    <string name="imeiNumber">Voici votre identifiant pour le site https://bigoud.games/SMSVote/ : %s</string>
</resources>
