<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.activities.VoteCreationActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/questionEditText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/typeYourQuestion"/>
    <Button
            android:text="@string/addAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addAnswerButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/validateButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/validateButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewAnswers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/questionEditText"
            app:layout_constraintBottom_toTopOf="@+id/addAnswerButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>